--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -12,6 +12,14 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
+    - name: Checkout master branch
+      uses: actions/checkout@v2
+      with:
+       ref: master
+       path: master
+    # move the posts stashed in the master branch over to the build directory
+    - name: Get existing posts
+      run: rm -rf mefideleted-blog/_posts && mv master/_posts/ mefideleted-blog/
     - name: Bundler Cache
       uses: actions/cache@v2
       with:
@@ -19,6 +27,17 @@ jobs:
         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
         restore-keys: |
           ${{ runner.os }}-gems-
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - name: Yarn cache
+      uses: actions/cache@v2
+      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
@@ -30,7 +49,9 @@ jobs:
     - name: Install dependencies
       run: yarn
     - name: Crawl MeFi
-      run: node cli.js deleted blue
+      run: |
+        node cli.js deleted blue
+        node cli.js deleted green
     - name: Install Gems
       working-directory: mefideleted-blog
       run: | 
@@ -41,6 +62,9 @@ jobs:
     - name: Build site
       run: JEKYLL_ENV=production bundle exec jekyll build
       working-directory: mefideleted-blog
+    # move the posts over to the master branch to be saved for the future
+    - name: Save posts
+      run: mv mefideleted-blog/_posts mefideleted-blog/_site/
     - name: Publish
       uses: peaceiris/actions-gh-pages@v3
       with:
